--- a/css/loader.css
+++ b/css/loader.css
@@ -1,10 +1,10 @@
 #loading{
     visibility: hidden;
-    width: 35px;
-    height: 35px;
+    width: 25px;
+    height: 25px;
   
-    border: 15px dotted #071de7;
-    border-top:15px dotted white;
+    border: 15px dotted white; 
+    border-top:15px dotted #071de7;
     border-bottom:15px dotted #071de7;
     border-radius: 100%;
   
